Working on JUnit tests and adding I18N handling of error messages.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -1,6 +1,8 @@
 # Very common errors
 error.00001=%s must be non-null.
+error.00002=switch on %s can't handle case %s.
 # More specific (one-off) errors
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
-error.00012=start() can't be invoked on a running animation.
+error.00012=%s can't be invoked on a running animation.
+error.00013=%s can only be invoked on a running animation.
