Working on JUnit tests and adding I18N handling of error messages.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -6,3 +6,6 @@ error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
 error.00012=%s can't be invoked on a running animation.
 error.00013=%s can only be invoked on a running animation.
+error.00014=First time in a KeyTimes instance must be zero.
+error.00015=Last time in a KeyTimes instance must be one.
+error.00016=KeyTimes %s are not in increasing order.
