Working on new KeyFrames interface and builder.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -9,3 +9,11 @@ error.00013=%s can only be invoked on a running animation.
 error.00014=First time in a KeyTimes instance must be zero.
 error.00015=Last time in a KeyTimes instance must be one.
 error.00016=KeyTimes %s are not in increasing order.
+
+error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
+error.00021=The frame count of %d does not match the time count of %d. These two values must match.
+error.00022=The frame count of %d does not match the interpolator count of %d. These two values must match.
+error.00023=The %d key frame value is null, it must be non-null.
+error.00024=The %d key frame time is null, it must be non-null.
+error.00025=The %d key frame interpolator is null, it must be non-null.
+error.00026=The key times %s are not in increasing order.
