--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -6,9 +6,6 @@ error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
 error.00012=%s can't be invoked on a running animation.
 error.00013=%s can only be invoked on a running animation.
-error.00014=First time in a KeyTimes instance must be zero.
-error.00015=Last time in a KeyTimes instance must be one.
-error.00016=KeyTimes %s are not in increasing order.
 
 error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
 error.00021=The frame count of %d does not match the time count of %d. These two values must match.
@@ -17,3 +14,7 @@ error.00023=The %d key frame value is null, it must be non-null.
 error.00024=The %d key frame time is null, it must be non-null.
 error.00025=The %d key frame interpolator is null, it must be non-null.
 error.00026=The key times %s are not in increasing order.
+
+error.00030=Could not find a %s method for the property %s on %s.
+error.00031=Either the passed key frames or the passed "to" animation values must be non-null, and the other must be null.
+error.00032=An unexpected exception occurred when reflectively invoking the method %s on %s.
