Working on API changes to PropertySetter and KeyFrames -- to make them more flexible.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -14,6 +14,8 @@ error.00023=The %d key frame value is null, it must be non-null.
 error.00024=The %d key frame time is null, it must be non-null.
 error.00025=The %d key frame interpolator is null, it must be non-null.
 error.00026=The key times %s are not in increasing order.
+error.00027=No further key frames exist.
+error.00028=Removal of a key frame is not supported.
 
 error.00030=Could not find a %s method for the property %s on %s.
 error.00031=Either the passed key frames or the passed "to" animation values must be non-null, and the other must be null.
