Working on API changes to PropertySetter and KeyFrames -- to make them more flexible.
Fixed a bug in the default time fractions calculated by the KeyFramesBuilder.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -1,6 +1,7 @@
 # Very common errors
 error.00001=%s must be non-null.
 error.00002=switch on %s can't handle case %s.
+error.00003=Impossible Event Occurred - Please file a bug report: %s.
 # More specific (one-off) errors
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
