Adding JUnit tests

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -1,7 +1,7 @@
 # Very common errors
 error.00001=%s must be non-null.
 error.00002=switch on %s can't handle case %s.
-error.00003=Impossible Event Occurred - Please file a bug report: %s.
+error.00003=The "impossible" has occurred deep in the Timing Framework code. Please file a bug report: %s.
 # More specific (one-off) errors
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
@@ -11,9 +11,8 @@ error.00013=%s can only be invoked on a running animation.
 error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
 error.00021=The frame count of %d does not match the time count of %d. These two values must match.
 error.00022=The frame count of %d does not match the interpolator count of %d. These two values must match.
-error.00023=The %d key frame value is null, it must be non-null.
-error.00024=The %d key frame time is null, it must be non-null.
-error.00025=The %d key frame interpolator is null, it must be non-null.
+error.00023=The key frame value at index %d is null, it must be non-null.
+error.00024=The key frame time fraction at index %d is null, it must be non-null.
 error.00026=The key times %s are not in increasing order.
 error.00027=No further key frames exist.
 error.00028=Removal of a key frame is not supported.
