--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -1,13 +1,12 @@
 # Very common errors
 error.00001=%s must be non-null.
 error.00002=switch on %s can't handle case %s.
-error.00003=The "impossible" has occurred deep in the Timing Framework code. Please file a bug report: %s.
+error.00003=The "impossible" has occurred deep in the Timing Framework code. Please file a bug report. %s.
 # More specific (one-off) errors
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
 error.00012=%s can't be invoked on a running animation.
 error.00013=%s can only be invoked on a running animation.
-
 error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
 error.00021=The frame count of %d does not match the time count of %d. These two values must match.
 error.00022=The frame count of %d does not match the interpolator count of %d. These two values must match.
@@ -16,6 +15,5 @@ error.00024=The key frame time fraction at index %d is null, it must be non-null
 error.00026=The key times %s are not in increasing order.
 error.00027=No further key frames exist.
 error.00028=Removal of a key frame is not supported.
-
 error.00030=Could not find a %s method for the property %s on %s.
 error.00031=An unexpected exception occurred when reflectively invoking the method %s on %s.
