Working to get the stop of an animation into the right thread context -- but this is not quite fixed.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -2,6 +2,7 @@
 error.00001=%s must be non-null.
 error.00002=switch on %s can't handle case %s.
 error.00003=The "impossible" has occurred deep in the Timing Framework code. Please file a bug report. %s.
+error.00004=Unexpected %s thrown in the timing thread context.
 # More specific (one-off) errors
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
