Adding JUnit tests for the Animator.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -7,7 +7,7 @@ error.00004=Unexpected %s thrown in the timing thread context.
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
 error.00012=%s can't be invoked on a running animation.
-error.00013=%s can only be invoked on a running animation.
+error.00013=%s can only be invoked on a running animation that is not paused.
 error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
 error.00021=The frame count of %d does not match the time count of %d. These two values must match.
 error.00022=The frame count of %d does not match the interpolator count of %d. These two values must match.
