Working on Javadoc and overview.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -18,3 +18,8 @@ error.00027=No further key frames exist.
 error.00028=Removal of a key frame is not supported.
 error.00030=Could not find a %s method for the property %s on %s.
 error.00031=An unexpected exception occurred when reflectively invoking the method %s on %s.
+# Swing
+error.00100=This code must be invoked within the Swing Event Dispatch Thread (EDT).
+error.00101=await() on the Swing EDT paint CountDownLatch in the rendering cycle was interrupted.
+#SWT
+error.00200=This code must be invoked within the SWT UI thread.
