--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -7,7 +7,6 @@ error.00004=Unexpected %s thrown in the timing thread context.
 error.00010=Duration of %d is <=0.
 error.00011=TimingSource for this AnimatorBuilder must be non-null. Did you forget to set a default timing source?
 error.00012=%s can't be invoked on a running animation.
-error.00013=%s can only be invoked on a running animation that is not paused.
 error.00020=At least two key frames, a frame at time 0 and a frame at time 1, must be defined.
 error.00021=The frame count of %d does not match the time count of %d. These two values must match.
 error.00022=The frame count of %d does not match the interpolator count of %d. These two values must match.
@@ -18,6 +17,7 @@ error.00027=No further key frames exist.
 error.00028=Removal of a key frame is not supported.
 error.00030=Could not find a %s method for the property %s on %s.
 error.00031=An unexpected exception occurred when reflectively invoking the method %s on %s.
+error.00040=A trigger that fires on any event cannot auto-reverse.
 # Swing
 error.00100=This code must be invoked within the Swing Event Dispatch Thread (EDT).
 error.00101=await() on the Swing EDT paint CountDownLatch in the rendering cycle was interrupted.
