--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -21,5 +21,6 @@ error.00040=A trigger that fires on any event cannot auto-reverse.
 # Swing
 error.00100=This code must be invoked within the Swing Event Dispatch Thread (EDT).
 error.00101=await() on the Swing EDT paint CountDownLatch in the rendering cycle was interrupted.
+error.00102=Problem adding an ActionListener, using the addActionListener method, to %s.
 #SWT
 error.00200=This code must be invoked within the SWT UI thread.
