Fixed error message.

--- a/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/org/jdesktop/core/animation/i18n/Err.properties
@@ -22,6 +22,6 @@ error.00040=A trigger that fires on any event cannot auto-reverse.
 error.00100=This code must be invoked within the Swing Event Dispatch Thread (EDT).
 error.00101=await() on the Swing EDT paint CountDownLatch in the rendering cycle was interrupted.
 error.00102=Problem adding an ActionListener, using the addActionListener method, to %s.
-error.00103=Problem removing an ActionListener, using the removeActionListener method, to %s.
+error.00103=Problem removing an ActionListener, using the removeActionListener method, from %s.
 #SWT
 error.00200=This code must be invoked within the SWT UI thread.
