--- a/timingframework-android/res/values/strings.xml
+++ b/timingframework-android/res/values/strings.xml
@@ -3,6 +3,13 @@
 
     <string name="demo_tsr">Timing Source Resolution</string>
     <string name="demo_tmb">Too Many Balls</string>
+    <string name="demo_race_b">Race (Basic)</string>
     <string name="app_name">Timing Framework Demos</string>
+    <string name="demo_race_go">Go</string>
+    <string name="demo_race_reverse">Reverse</string>
+    <string name="demo_race_pause">Pause</string>
+    <string name="demo_race_stop">Stop</string>
+    <string name="demo_tmb_add">Add Ball</string>
+    <string name="demo_tmb_remove">Remove Ball</string>
 
 </resources>
