Added copy methods to the Builder and getters to Animator.

--- a/timingframework-core/src/main/resources/org/jdesktop/core/animation/i18n/Err.properties
+++ b/timingframework-core/src/main/resources/org/jdesktop/core/animation/i18n/Err.properties
@@ -17,6 +17,7 @@ error.00026=The key times %s are not in increasing order.
 error.00030=Could not find a %s method for the property %s on %s.
 error.00031=An unexpected exception occurred when reflectively invoking the method %s on %s.
 error.00040=A trigger that fires on any event cannot auto-reverse.
+error.00050=Via Builder.copy() two animations are now planning to auto-dispose the same timing source %s when they stop. Is this a bug?
 # Swing
 error.00100=This code must be invoked within the Swing Event Dispatch Thread (EDT).
 error.00101=await() on the Swing EDT paint CountDownLatch in the rendering cycle was interrupted.
